# unison-fsmonitor-macos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac
src/: Makefile.am  blocking_queue.hpp  debug.hpp  directory.hpp  fswatch.hpp  fswatchmanager.hpp  group_by.hpp  main.cc  manager.hpp  plf_colony.h  result.hpp  socket.hpp  unisonmanager.hpp  utility.hpp  watchman.hpp
