bin_PROGRAMS=unison-fsmonitor

unison_fsmonitor_CXXFLAGS = ${GLIB_CFLAGS}
unison_fsmonitor_LDFLAGS = ${GLIB_LIBS}

unison_fsmonitor_SOURCES=main.cc \
                         blocking_queue.hpp \
                         debug.hpp \
                         directory.hpp \
                         fswatch.hpp \
                         fswatchmanager.hpp \
                         group_by.hpp \
                         manager.hpp \
                         unisonmanager.hpp \
                         utility.hpp \
                         watchman.hpp
