bin_PROGRAMS=unison-fsmonitor

unison_fsmonitor_CXXFLAGS = ${GLIB_CFLAGS}
unison_fsmonitor_LDFLAGS = ${GLIB_LIBS}

unison_fsmonitor_SOURCES=main.cc \
                         debug.hpp \
                         directory.hpp \
                         fswatch.hpp \
                         fswatchmanager.hpp \
                         group_by.hpp \
                         manager.hpp \
                         unisonmanager.hpp \
                         result.hpp \
                         plf_colony.h \
                         plf_stack.h \
                         watchman.hpp
